@@ -242,7 +242,7 @@ GameInfoDialog::GameInfoDialog(
   ctrls.push_back("Sega Genesis",   "GENESIS"      );
   ctrls.push_back("CompuMate",      "COMPUMATE"    );
 //  ctrls.push_back("KidVid",         "KIDVID"      );
-//  ctrls.push_back("MindLink",       "MINDLINK"     );
+  ctrls.push_back("MindLink",       "MINDLINK"     );
   myP0Controller = new PopUpWidget(myTab, font, xpos+lwidth, ypos,
                                    pwidth, lineHeight, ctrls, "", 0, 0);
   wid.push_back(myP0Controller);
